--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,24 @@ server.port = 8081
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.initialization-mode = NEVER
 spring.datasource.platform = all
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.implicit-strategy= org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.freemarker.template-loader-path= classpath:/templates
 spring.freemarker.suffix = .ftl
-spring.datasource.url = jdbc:mysql://localhost:3306/Cloud_Services
-spring.datasource.username = root
-spring.datasource.password =root123
+#spring.datasource.url = jdbc:mysql://localhost:3306/Cloud_Services
+#spring.datasource.username = root
+#spring.datasource.password =root123
+#
+#spring.jpa.hibernate.ddl-auto = update
 
-spring.jpa.hibernate.ddl-auto = update
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 
 
