--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.freemarker.template-loader-path= classpath:/templates
 spring.freemarker.suffix = .ftl
 spring.datasource.url = jdbc:mysql://localhost:3306/Cloud_Services
 spring.datasource.username = root
-spring.datasource.password =panosaek1997
+spring.datasource.password = "Your code"
 
 spring.jpa.hibernate.ddl-auto = update
 
